# app/Http/Controllers/ItemController.php
@@ -8,9 +8,22 @@ use Illuminate\Http\Request;
 class ItemController extends Controller
 {
     /**
+     * @OA\Get(
+     *      path="/items",
+     *      operationId="getItemsList",
+     *      tags={"Items"},
+     *      summary="Get list of items",
+     *      description="Get list of items",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *       @OA\Response(response=400, description="Bad request"),
+     *     )
+     *
      * Display a listing of the resource.
      *
-     * @return Item[]|\Illuminate\Database\Eloquent\Collection
+     * @return Item[]
      */
     public function index()
     {
@@ -18,6 +31,46 @@ class ItemController extends Controller
     }
 
     /**
+     *  @OA\Post(
+     *      path="/items",
+     *      operationId="createItem",
+     *      tags={"Items"},
+     *      summary="Create an item",
+     *      description="Create a new item in database",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *          name="name",
+     *          description="Items's name",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="price",
+     *          description="Item's price in cents",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="isActive",
+     *          description="Item's status",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="boolean"
+     *          )
+     *      ),
+     *      @OA\Response(response=400, description="Bad request"),
+     * )
+     *
      * Store a newly created resource in storage.
      *
      * @param Request $r
@@ -39,6 +92,29 @@ class ItemController extends Controller
     }
 
     /**
+     *  @OA\Get(
+     *      path="/items/{id}",
+     *      operationId="showItem",
+     *      tags={"Items"},
+     *      summary="Show an items",
+     *      description="Show an existing item from the database",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Item's id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="The item's ID does not exists."),
+     * )
+     *
      * Display the specified resource.
      *
      * @param Item $item
@@ -50,6 +126,56 @@ class ItemController extends Controller
     }
 
     /**
+     * @OA\Put(
+     *      path="/items/{id}",
+     *      operationId="updateItem",
+     *      tags={"Items"},
+     *      summary="Update an item",
+     *      description="Update an existing item from the database",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Item's id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="name",
+     *          description="Items's name",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="price",
+     *          description="Item's price in cents",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="isActive",
+     *          description="Item's status",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="boolean"
+     *          )
+     *      ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="The item's ID does not exists."),
+     * )
+     *
      * Update the specified resource in storage.
      *
      * @param Request $r
@@ -71,6 +197,29 @@ class ItemController extends Controller
     }
 
     /**
+     * @OA\Delete(
+     *      path="/items/{id}",
+     *      operationId="deleteItem",
+     *      tags={"Items"},
+     *      summary="Delete an item",
+     *      description="Delete an existing item from ther database",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Item's id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="The item's ID does not exists."),
+     * )
+     *
      * Remove the specified resource from storage.
      *
      * @param Item $item
